agregando carrusel al main

--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -2,6 +2,10 @@
    background-color: rgb(88, 127, 212);
 }
 
-.row>*{
-   width: 0%;
+.carousel-item img{
+   height: 70vh; 
+   width: 100%;
+   background-size: cover;
+   
+
 }
